[package]
name = "ucpack"
description = "Rust implementation of the ucpack serialization format used in the Arduino Alvik"
license = "MIT"
version = "0.1.3"
edition = "2021"

[features]
default = ["strict", "std"]
std = ["serde/std"]
strict = []

[[test]]
name = "std"
required-features = ["std"]

[dependencies]
serde = { version = "1.0.214", default-features = false, features = ["derive"] }
